Inicio do design

--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <title>Projeto do Rubens</title>
+        <link rel="stylesheet" href="estilo.css" />
     </head>
     <body>
-        <h1>Projeto do Rubens</h1>
+        <h1>Projeto do Rubens Takiguti Ribeiro</h1>
+
+        <p>Novo parágrafo</p>
     </body>
 </html>
